--- a/Code/Index.html
+++ b/Code/Index.html
@@ -4,29 +4,48 @@
 
     <title>A JoJo's Bizzare Website</title>
     <link rel="stylesheet" type="text/css" href="style_projet.css">
+    <meta charset="utf-8">
+    <meta name="author" content="Alessio Martino">
 
 </head>
 
 <body>
    
-    <header>
+    <header id="header_home_page">
         <br><br><br><br><br><br><br><br><br>
         <h1>A JoJo's Bizzare Website</h1>    
         <br><br><br>
 
-        <span>
-            Auteur
+        <span id="span_header_1">
+           <a href="">Auteur</a> 
         </span>
 
-        <span>
-            Partie
+        <span id="span_header_2">
+           <a href="">Histoire</a> 
         </span>
 
-        <span>
-            Contact
+        <span id="span_header_3">
+           <a href="">Contact</a> 
         </span>
         <br><br><br><br><br><br><br><br><br><br><br>
-    </header>    
+    </header> 
+    
+    <article id="article_home_page">
+        <br><br><br><br><br><br>
+        <h2 id="intro">
+            Introduction
+        </h2>
+
+        <span id="span_intro">
+            Bonjour et bienvenu dans le site bizzare de Jojo. Dans cette introduction je vais vous parler de moi et du site. <br>
+            Pour commencer, je m'appele Alessio Martino, je suis apprenti informaticien à l'ETML et dans le cadre de nos cours nous devons créer un site web sur un sujet qui nous passionne. <br>
+            Étant donné que je suis un fan d'anime et surtout de l'anime <em>Jojo's Bizzare Adventure</em>, je me suis dit que ce serait une bonne idée de faire une sorte de wiki qui regroupe de la partie 1 à 7 (il y a 9 partie mais la 9 est en cours et la 8 je ne l'ai pas encore lue). <br>
+            Dans chaque partie nous allons voir l'histoire de la partie, le protagoniste, l'antagoniste et le système de pouvoir dans partie. <br> <br>
+            Je vais rapidement vous parler de l'histoire : <br>
+            On suit une famille, les Joestar sur plusieur generations qui débute a la fin du XIXe siècle qui doivent lutter contre les antagonistes de chaque parties. Ce qui est bien avec ce manga/anime c'est qu'a chaque partie il y a un protagoniste différent.
+            <br><br><br><br><br><br><br><br><br>
+        </span>
+    </article>
 
 
 </body>
