--- a/Code/Index.html
+++ b/Code/Index.html
@@ -2,9 +2,14 @@
 <html lang="fr">
 <head>
 
+    <link rel="icon" type="image/png" href="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png">
+
     <title>A JoJo's Bizzare Website</title>
+
     <link rel="stylesheet" type="text/css" href="style_projet.css">
+
     <meta charset="utf-8">
+    
     <meta name="author" content="Alessio Martino">
 
 </head>
@@ -17,7 +22,7 @@
         <br><br><br>
 
         <span id="span_header_1">
-           <a href="">Auteur</a> 
+           <a href="auteur.html">Auteur</a> 
         </span>
 
         <span id="span_header_2">
@@ -31,7 +36,7 @@
     </header> 
     
     <article id="article_home_page">
-        <br><br><br><br><br><br>
+        <br><br><br><br>
         <h2 id="intro">
             Introduction
         </h2>
@@ -42,8 +47,10 @@
             Étant donné que je suis un fan d'anime et surtout de l'anime <em>Jojo's Bizzare Adventure</em>, je me suis dit que ce serait une bonne idée de faire une sorte de wiki qui regroupe de la partie 1 à 7 (il y a 9 partie mais la 9 est en cours et la 8 je ne l'ai pas encore lue). <br>
             Dans chaque partie nous allons voir l'histoire de la partie, le protagoniste, l'antagoniste et le système de pouvoir dans partie. <br> <br>
             Je vais rapidement vous parler de l'histoire : <br>
-            On suit une famille, les Joestar sur plusieur generations qui débute a la fin du XIXe siècle qui doivent lutter contre les antagonistes de chaque parties. Ce qui est bien avec ce manga/anime c'est qu'a chaque partie il y a un protagoniste différent.
-            <br><br><br><br><br><br><br><br><br>
+            On suit une famille, les Joestars, sur plusieur generations qui débute a la fin du XIXe siècle qui doivent lutter contre les antagonistes de chaque parties. Chaque personne de la lignée des Joestars a une marque en forme d'étoile sur l'épaule gauche. <br>
+            La famille des Joestars a une "Malédiction" qui est la confrontation inévitable avec DIO et ses alliés (nous veront qui est DIO plus en détail dans la partie 1). <br>
+            Ce qui est bien avec ce manga/anime c'est qu'a chaque partie il y a un protagoniste différent.
+            <br><br><br><br><br><br>
         </span>
     </article>
 
