--- a/Code/Index.html
+++ b/Code/Index.html
@@ -26,11 +26,11 @@
         </span>
 
         <span id="span_header_2">
-           <a href="">Histoire</a> 
+           <a href="histoire.html">Histoire</a> 
         </span>
 
         <span id="span_header_3">
-           <a href="">Contact</a> 
+           <a href="contact.html">Contact</a> 
         </span>
         <br><br><br><br><br><br><br><br><br><br><br>
     </header> 
@@ -42,10 +42,10 @@
         </h2>
 
         <span id="span_intro">
-            Bonjour et bienvenu dans le site bizzare de Jojo. Dans cette introduction je vais vous parler de moi et du site. <br>
-            Pour commencer, je m'appele Alessio Martino, je suis apprenti informaticien à l'ETML et dans le cadre de nos cours nous devons créer un site web sur un sujet qui nous passionne. <br>
+            Bonjour et bienvenue dans le site bizzare de Jojo. Dans cette introduction, je vais vous parler de moi et du site. <br>
+            Pour commencer, je m'appelle Alessio Martino, je suis apprenti informaticien à l'ETML et dans le cadre de nos cours nous devons créer un site web sur un sujet qui nous passionne. <br>
             Étant donné que je suis un fan d'anime et surtout de l'anime <em>Jojo's Bizzare Adventure</em>, je me suis dit que ce serait une bonne idée de faire une sorte de wiki qui regroupe de la partie 1 à 7 (il y a 9 partie mais la 9 est en cours et la 8 je ne l'ai pas encore lue). <br>
-            Dans chaque partie nous allons voir l'histoire de la partie, le protagoniste, l'antagoniste et le système de pouvoir dans partie. <br> <br>
+            Dans chaque partie nous allons voir l'histoire de la partie, le protagoniste, l'antagoniste et le système de pouvoir dans la partie. <br> <br>
             Je vais rapidement vous parler de l'histoire : <br>
             On suit une famille, les Joestars, sur plusieur generations qui débute a la fin du XIXe siècle qui doivent lutter contre les antagonistes de chaque parties. Chaque personne de la lignée des Joestars a une marque en forme d'étoile sur l'épaule gauche. <br>
             La famille des Joestars a une "Malédiction" qui est la confrontation inévitable avec DIO et ses alliés (nous veront qui est DIO plus en détail dans la partie 1). <br>
