--- a/Code/auteur.html
+++ b/Code/auteur.html
@@ -14,12 +14,35 @@
     <nav>
         <span>
             <a href="Index.html">
-                <img id="boutton_acceui" src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 3%;" alt="boutton pour aller a l'acceuil">
-            </a>
+                <img id="boutton_acceui" src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 3%;" alt="boutton pour aller a l'acceuil"></a>
+        </span>
+
+        <span id="button_1">
+            <a href="histoire.html">Histoire</a> 
+        </span>
+
+        <span id="button_2">
+            <a href="contact.html">Contact</a> 
         </span>
     </nav>
 
+    <h1 id="auteur_title">Hirohiko Araki</h1>
 
+    <div id="Araki_1">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+
+    <div id="Araki_2">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+
+
+
+
+    
+
+    <p>Hirohiko Araki, né le 7 juin 1960 à Sendai au Japon, est un célèbre mangaka, principalement connu pour la série culte JoJo's Bizarre Adventure, <br>publiée depuis 1987. Passionné de dessin depuis l'enfance, il devient professionnel à 19 ans et se distingue par un style unique, influencé par la mode, la sculpture classique et la musique rock.</p>
+    <p>JoJo's Bizarre Adventure : Lancée en 1987 dans le Weekly Shōnen Jump, <br>Cette saga multigénérationnelle est célèbre pour ses poses iconiques, ses combats stratégiques basés sur les "Stands" et le "Hamon", et son évolution artistique.</p>
 
 </body>
 
