--- a/Code/auteur.html
+++ b/Code/auteur.html
@@ -28,18 +28,13 @@
 
     <h1 id="auteur_title">Hirohiko Araki</h1>
 
-    <div id="Araki_1">
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+     
+
+    <div id="Araki_photo">
+        <img id="photo" src="https://www.shoshosein.com/sites/default/files/auteur/araki-hirohiko.jpg" alt="">
     </div>
 
-    <div id="Araki_2">
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    </div>
-
-
-
-
-    
+    <br><br><br><br><br>
 
     <p>Hirohiko Araki, né le 7 juin 1960 à Sendai au Japon, est un célèbre mangaka, principalement connu pour la série culte JoJo's Bizarre Adventure, <br>publiée depuis 1987. Passionné de dessin depuis l'enfance, il devient professionnel à 19 ans et se distingue par un style unique, influencé par la mode, la sculpture classique et la musique rock.</p>
     <p>JoJo's Bizarre Adventure : Lancée en 1987 dans le Weekly Shōnen Jump, <br>Cette saga multigénérationnelle est célèbre pour ses poses iconiques, ses combats stratégiques basés sur les "Stands" et le "Hamon", et son évolution artistique.</p>
