fin de la sequance du 30.01

--- a/Code/auteur.html
+++ b/Code/auteur.html
@@ -12,9 +12,9 @@
 <body>
     
     <nav>
-        <span>
+        <span id="boutton_acceui">
             <a href="Index.html">
-                <img id="boutton_acceui" src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 3%;" alt="boutton pour aller a l'acceuil"></a>
+                <img src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
         </span>
 
         <span id="button_1">
@@ -34,10 +34,14 @@
         <img id="photo" src="https://www.shoshosein.com/sites/default/files/auteur/araki-hirohiko.jpg" alt="">
     </div>
 
-    <br><br><br><br><br>
+    <br><br><br>
 
-    <p>Hirohiko Araki, né le 7 juin 1960 à Sendai au Japon, est un célèbre mangaka, principalement connu pour la série culte JoJo's Bizarre Adventure, <br>publiée depuis 1987. Passionné de dessin depuis l'enfance, il devient professionnel à 19 ans et se distingue par un style unique, influencé par la mode, la sculpture classique et la musique rock.</p>
-    <p>JoJo's Bizarre Adventure : Lancée en 1987 dans le Weekly Shōnen Jump, <br>Cette saga multigénérationnelle est célèbre pour ses poses iconiques, ses combats stratégiques basés sur les "Stands" et le "Hamon", et son évolution artistique.</p>
+    <article id="Biographie">
+        <h1><strong>Biographie</strong></h1>
+
+        <p>Hirohiko Araki, né le 7 juin 1960 à Sendai au Japon, est un célèbre mangaka, principalement connu pour la série culte JoJo's Bizarre Adventure, <br>publiée depuis 1987. Passionné de dessin depuis l'enfance, il devient professionnel à 19 ans et se distingue par un style unique, influencé par la mode, la sculpture classique et la musique rock.</p>
+        <p>JoJo's Bizarre Adventure : Lancée en 1987 dans le Weekly Shōnen Jump, <br>Cette saga multigénérationnelle est célèbre pour ses poses iconiques, ses combats stratégiques basés sur les "Stands" et le "Hamon", et son évolution artistique.</p>
+    </article>
 
 </body>
 
