--- a/Code/contact.html
+++ b/Code/contact.html
@@ -13,7 +13,7 @@
     <nav>
         <span>
             <a href="Index.html">
-                <img id="boutton_acceui" src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 3%;" alt="boutton pour aller a l'acceuil"></a>
+                <img id="boutton_acceui" src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
         </span>
 
         <span id="button_1">
