--- a/Code/histoire.html
+++ b/Code/histoire.html
@@ -13,7 +13,7 @@
     <nav>
         <span>
             <a href="Index.html">
-                <img id="boutton_acceui" src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 3%;" alt="boutton pour aller a l'acceuil"></a>
+                <img class="boutton_acceui" src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
         </span>
 
         <span id="button_1">
@@ -24,6 +24,47 @@
             <a href="contact.html">Contact</a> 
         </span>
     </nav>
+
+
+
+    <Article id="part_histoire">
+        <span >
+            <a href="Part1.html">
+            <img id="part1_histoire" src="https://preview.redd.it/3gn78g57dlq51.jpg?width=1080&crop=smart&auto=webp&s=fc5be073d9bfb7be9370a3d507e10fc7240c1799" alt="1ere partie"></a>
+        </span>
+
+        <span>
+            <a href="Part2.html">
+            <img id="part2_histoire" src="https://i.ytimg.com/vi/--mu0CvFqPk/maxresdefault.jpg" alt="2e partie"></a>
+        </span>
+
+        <span>
+            <a href="Part3.html">
+            <img id="part3_histoire" src="https://preview.redd.it/rrovw6vi4lp51.png?auto=webp&s=629d9e1b05754d8f93f8a6a362cce20634fbd02d" alt="3e partie"></a>
+        </span>
+
+        <span>
+            <a href="Part4.html">
+            <img id="part4_histoire" src="https://i.redd.it/092voru19j851.png" alt="4e partie"></a>
+        </span>
+
+        <span>
+            <a href="Part5.html">
+            <img id="part5_histoire" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXGT8DrcxvYdctWUWSHMDSTqNEEnRJzu3VgQ&s" alt="5e partie"></a>
+        </span>
+
+        <span>
+            <a href="Part6.html">
+            <img id="part6_histoire" src="https://i.redd.it/kq8diz02vtk21.png" alt="6e partie"></a>
+        </span>
+
+        <span>
+            <a href="Part7.html">
+            <img id="part7_histoire" src="https://i.redd.it/kx4ttqnnb4951.png" alt="7e partie"></a>
+        </span>
+    </Article>
+
+
 
 
 </body>
