debut de la sequance du 2.02

--- a/Code/Part1.html
+++ b/Code/Part1.html
@@ -29,7 +29,7 @@
         </span>
     </nav>
 
-    <h1 id="title_part">Partie 1 - Phantom Blood</h1>
+    <h1 id="texte_part">Partie 1 - Phantom Blood</h1>
 
     <div id="img_part">
         <img id="img_aspect" src="https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=cover,format=auto,quality=85,width=1920/keyart/GYP8DP1MY-backdrop_wide" alt="image de la 1ere partie">
@@ -41,7 +41,7 @@
 
     <p id="texte_part">
 
-        Dans cette Partie, l'histoire se déroule en Angleterre, entre le milieu et la fin des années 1880. <br> On suit Jonathan Joestar, l'héritier de la riche famille Joestar, et son frère adoptif Dio Brando , qui convoite leur fortune. <br> À l'aide d'un ancien masque de pierre, Dio se transforme en vampire, et Jonathan apprend le Hamon (l'Onde en français), une technique martiale basée sur la lumière du soleil, pour combattre Dio 
+        Dans cette Partie, l'histoire se déroule en Angleterre, entre le milieu et la fin des années 1880. <br> On suit Jonathan Joestar, l'héritier de la riche famille Joestar, et son frère adoptif Dio Brando , qui convoite leur fortune. <br> À l'aide d'un ancien masque de pierre, Dio se transforme en vampire, et Jonathan apprend le Hamon (l'Onde en français), une technique martiale basée sur la lumière du soleil, pour combattre Dio. 
 
     </p>
 
@@ -53,7 +53,8 @@
 
         Jonathan Joestar est le 1er protagoniste de Jojo's Bizzare Adventure. <br> En deux mots, Jonathan vivait une vie paisible jusqu'a l'arrivée de son frère adoptif, Dio. Ce dernier avait envie de tuer Jonathan et donc fait recourt au Masque de Pierre pour se trancformer en Vampire. <br>
         Etant donné que les vampires craignent la lumière du soleil et qu'ils n'ont aucune autre faiblaisse, Jonathan se fait prendre sous l'aile de Will Anthonio Zeppeli, qui maitrise le Hamon. <br>
-        Après quelque années d'entrainement Jonathan maistrise le Hamon et va battre Dio dans son manoir où il lui coupera la tête. Quelques années après Dio fera sn grand retour dans le bateau que Jonathan prendra pour aller en lune de miel avec sa femme Erina. <br>
+        Après quelques années d'entrainement, Jonathan maistrise le Hamon et va battre Dio dans son manoir où il lui coupera la tête. <br>
+        Quelques années après Dio fera sn grand retour dans le bateau que Jonathan prendra pour aller en lune de miel avec sa femme Erina. <br>
         Malheureusement Jonathan se sacrifiera en restant sur le bateau en feu en gardant la la tête de Dio avec lui pour que Erina et un bébé puissent s'enfuire dans le cerceuil où était cacher Dio.
         
 
@@ -81,8 +82,8 @@
 
     <p id="texte_part">
 
-        A la mort de son père, Dio Brando se fait adopter par les Joestar (George Joestar, pere de Jonathan, a fait une chute en calèche et a dévalé une montagne. Le pere de Dio, qui voulait aller voler les affaires de George passa près de ce dernier. <br> George le pris pour un medecin et lui dit qu'il lui devait la vie et il prendra volontier son fils en adoption si le père de Dio parvenait a mourir).
-        Dio a donc rejoint la famille Joestar pour seul et unique but de la tuer et de prendre posession du masque de pierre :
+        A la mort de son père, Dio Brando se fait adopter par les Joestar (George Joestar, père de Jonathan, a fait une chute en calèche et a dévalé une montagne. Le père de Dio, qui voulait aller voler les affaires de George passa près de ce dernier. <br> George le pris pour un médecin et lui dit qu'il lui devait la vie et il prendra volontiers son fils en adoption si le père de Dio parvenait à mourir).
+        <br> Dio a donc rejoint la famille Joestar pour seul et unique but de la tuer et de prendre posession du Masque de pierre :
 
     </p>
 
@@ -94,16 +95,41 @@
 
      <p id="texte_part">
 
-        Dio commence donc des recherches pour savoir comment marche ce masque et se rend compte qu'il doit verser une goutte de sang.
-        Dio tue donc George Joestar pour mettre du sang sur son masque en l'ayant sur sa tête. Il se transforme en vampire et brûle la maison tout en se battant avec Jonathan (qui ne maitrise pas encore le Hamon)
+        Dio commence donc des recherches pour savoir comment fonctionne ce masque et se rend compte qu'il doit verser une goutte de sang.
+        Dio tue donc George Joestar pour mettre du sang sur son masque en l'ayant sur sa tête. Il se transforme en vampire et brûle la maison tout en se battant avec Jonathan (qui ne maîtrise pas encore le Hamon)
         
 
     </p>
 
+    <div id="img_part">
+        <img id="img_aspect" src="https://i.ytimg.com/vi/wLoRiTk-awo/maxresdefault.jpg" alt="">
+    </div>
+    <br><br>
+
+    <h1 id="texte_part">Les JoBros - Will Anthonio Zeppeli, Speedwagon</h1>
+
+    <p id="texte_part">
+
+        Dans Jojo, il y a des personnes que l'on surnome les Jobros. Ils accompagnent durant toute la partie les protagonistes. <br>
+        Dans la partie 1, il y a 2 Jobros: Will Anthonio Zeppeli et Robert E. O. Speedwagon. <br>
+        Will Anthonio Zeppeli est la personne qui a appris le Hamon a Jonathan: 
+
+    </p>
+
+    <span id="img_part">
+        <img id="img_aspect" src="https://preview.redd.it/who-is-the-jobro-of-each-part-part-1-v0-accukaxmvjqc1.jpg?width=400&format=pjpg&auto=webp&s=dc9266393acfb06463d0560080e22559f4beb126" alt="">
+    </span>
+
+    <p id="texte_part">
+        <br> Speedwagon est celui qui a créée l'association Speedwagon qui est présente pendant toute l'histoire
+    </p>
 
 
+    <span id="img_part">
+        <img id="img_aspect" src="https://preview.redd.it/who-is-the-jobro-of-each-part-part-1-v0-53tmwbxmvjqc1.jpg?width=640&crop=smart&auto=webp&s=a4113f24f1affee75b7983e8fbb38148f6136b1f" alt="">
+    </span>
 
-
+    <br>
 
 
 
@@ -115,8 +141,8 @@
 
     <footer>
 
-        <span>
-         <a href="Part2.html">Partie Suivante ></a>
+        <span id="footer_button_part1">
+         <a href="Part2.html">Partie 2 ></a>
         </span>
 
     </footer>
