--- a/Code/Part3.html
+++ b/Code/Part3.html
@@ -29,7 +29,25 @@
         </span>
     </nav>
 
+    <h1 id="texte_part">Partie 3 - Stardust Crusaders</h1>
 
+    <div id="img_part">
+        <img id="img_aspect" src="https://wallpapers.com/images/hd/stardust-crusaders-1920-x-1080-wallpaper-6v630vfytcoxdn8s.jpg" alt="">
+    </div>
+
+
+
+
+    <footer>
+    <span id="footer_button_part2-6">
+        <a href="Part2.html">< Partie 2 </a>
+    </span>
+
+    <span id="footer_button_part2-6">
+        <a href="Part4.html">Partie 4 ></a>
+    </span>
+
+</footer>
 
     
 
