--- a/Code/Part4.html
+++ b/Code/Part4.html
@@ -29,7 +29,23 @@
         </span>
     </nav>
 
+    <h1 id="texte_part">Partie 4 - Diamond is Unbreakable</h1>
 
+    <div id="img_part">
+        <img id="img_aspect" src="https://m.media-amazon.com/images/S/pv-target-images/499012fce629312c7f1854d3b5dd0a2a1ae3802d8d150a1e4db78f9068dec405.jpg" alt="">
+    </div>
+
+
+    <footer>
+    <span id="footer_button_part2-6">
+        <a href="Part3.html">< Partie 3 </a>
+    </span>
+
+    <span id="footer_button_part2-6">
+        <a href="Part5.html">Partie 5 ></a>
+    </span>
+
+</footer>
 
     
 
