--- a/Code/Part5.html
+++ b/Code/Part5.html
@@ -29,7 +29,25 @@
         </span>
     </nav>
 
+    <h1 id="texte_part">Partie 5 - Golden Wing</h1>
 
+    <div id="img_part">
+        <img id="img_aspect" src="https://wallpaper.forfun.com/fetch/9d/9d394e981ea9baca35b0cb44484ea6f5.jpeg" alt="">
+    </div>
+
+
+
+
+    <footer>
+    <span id="footer_button_part2-6">
+        <a href="Part4.html">< Partie 4 </a>
+    </span>
+
+    <span id="footer_button_part2-6">
+        <a href="Part6.html">Partie 6 ></a>
+    </span>
+
+</footer>
 
     
 
