--- a/Code/part2.html
+++ b/Code/part2.html
@@ -29,11 +29,136 @@
         </span>
     </nav>
 
+    <h1 id="texte_part"> Partie 2 - Battle Tendency</h1>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://wallpapercave.com/wp/wp7348531.jpg" alt="">
+    </div>
 
 
-    
+    <h2 id="texte_part">
+        Explication de la partie
+    </h2>
+
+    <p id="texte_part">
+        Dans cette partie, l'histoire se déroule au Mexique avec la découverte des Hommes du Pillier, puis en Italie et la Suisse. <br> 
+        On suis Joseph Joestar, qui est le petit-fils de Jonathan (protaginiste de la partie 1) en 1939. <br> Straizo, un vieil ami de son grand-père, le retrouve et lui montre les Hommes du pilier : Kars, Wamuu et Esidisi, des créatures antiques qui veulent s'emparer de la Pierre rouge d’Aja pour devenir immortels.
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://www.jojodnd.com/artifacts/Assets/Red_Stone_of_Aja.webp" alt="">
+    </div>
+
+    <h2 id="texte_part">
+        Protagoniste - Joseph Joestar
+    </h2>
+
+    <p id="texte_part">
+        Forcé d'aller battre les Hommens du Pillier, Joseph part en Italie pour retouver Lisa Lisa pour aller s'entraîner et perfectionner le Hamon. <br> Il fait donc la rencontre de Lisa Lisa et découvre par la suite que c'est sa mère, et son Jobros, Caesar Zeppeli. <br>
+        Joseph se bat donc contre Straizo, devenu vampire, puis contre Esidisi, Wamuu et pour finir Kars. Il possède plusieurs techniques: le Hamon et la technique secrète des Joestar.
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://static.jojowiki.com/images/thumb/2/20/latest/20201202184233/JosephEOH.png/400px-JosephEOH.png" alt="">
+    </div>
+
+    <p id="texte_part">
+        La technique secrète des Joestars est... la fuite :
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://i.pinimg.com/originals/e6/1c/54/e61c541a6e262c678ec0bb5a1cf74c90.gif" alt="">
+    </div>
+
+    <h2 id="texte_part">
+        Antagonistes - Esidisi, Wamuu, Kars
+    </h2>
+
+    <p id="texte_part">
+        Les trois Hommes du Pilier viennent des zones du désert mexicain, d'Amérique du Sud, là où Kars et sa tribu se sont cachés pendant des siècles pour survivre à la lumière. Wamuu et Esidisi étaient ses amis fidèles.
+        <br> Voici à quoi ressemble Esidisi et il maîtrise le fait de pouvoir lancer et manipuler son sang pour le chauffer :
+    </p>
 
 
+    <div id="texte_part">
+        <img id="img_aspect" src="https://images.castingcall.club/role_images/esidisi-78747.png" alt="">
+    </div>
+
+    <p id="texte_part">
+        Wamuu est le 2e antagoniste qui fait partie des Hommes du Pillier. Il maîtrise le vent. il peut cracher du vent et faire tourner ses bras pour faire du vent.
+        <br>Voici à quoi il ressemble :
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://pbs.twimg.com/media/Gt-4YT8XcAAty3S.jpg" alt="">
+    </div>
+
+    <p id="texte_part">
+        Pour finir, on va parler de Kars, l'antagoniste principal. Il a réussi à récuperer la Pierre d'Aja et est donc devenu immortel et ne craint pas la lumière du soleil.
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://static.jojowiki.com/images/thumb/8/88/latest/20240224164606/Kars_Infobox_Manga.png/400px-Kars_Infobox_Manga.png" alt="">
+        <img id="img_aspect" src="https://i.makeagif.com/media/11-01-2024/evJRsO.gif" alt="">
+    </div>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://m.media-amazon.com/images/M/MV5BZjk1MjBkNzgtMzY5OC00NzE0LTg4MGMtODkwMDM3OWU1ODRmXkEyXkFqcGc@._V1_.jpg" alt="">
+    </div>
+
+    <h2 id="texte_part">
+        Les JoBros - Lisa Lisa, Caesar Zeppeli, Rodolph von Stroheim
+    </h2>
+
+    <p id="texte_part">
+        Nous allons commencer par Lisa Lisa, autrement dit la prof et la mère de Joseph:
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://static.jojowiki.com/images/5/5c/latest/20240713072921/Lisalisa_jojoeoh.png" alt="">
+    </div>
+
+    <p id="texte_part">
+        Caesar est le Jobros de Joseph qui est malheureusement mort dans son combat contre Wamuu après s'être fait écraseé par un rocher qui est tombé du plafond. <br> Il maîtrisait les bulles de savon où il les impraignaient de Hamon.
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://i.ytimg.com/vi/Kz2JJtM5oog/hqdefault.jpg" alt="">
+    </div>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://i.redd.it/sqjpfx7vf59d1.gif" alt="">
+        <img id="img_aspect" src="https://i.redd.it/h9nduaetzjdg1.gif" alt="">
+    </div>
+
+    <p id="texte_part">
+       <br><br><br>     Pour finir, on va parler de Rodolph von Stroheim, il est soldat Nazi et accompagne Joseph et Caesar pour aller battre les Hommes du Pillier. <br>
+        Voici à quoi il ressemble :
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://preview.redd.it/if-stroheim-jojo-was-in-wolfenstein-how-would-his-boss-v0-nkz9a35vrt2e1.jpg?width=500&format=pjpg&auto=webp&s=4d6408929b8d36b18036cb82b13045ead2209fe4" alt="">
+    </div>
+
+    <br>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://i.redd.it/ls18jk96dht51.jpg" alt="">
+    </div>
+
+    <br><br>
+
+
+    <footer>
+        <span id="footer_button_part2-6">
+            <a href="Part1.html">< Partie 1 </a>
+        </span>
+
+        <span id="footer_button_part2-6">
+            <a href="Part3.html">Partie 3 ></a>
+        </span>
+
+    </footer>
 
 
 </body>
