--- a/Code/Index.html
+++ b/Code/Index.html
@@ -4,7 +4,7 @@
 
     <link rel="icon" type="image/png" href="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png">
 
-    <title>A JoJo's Bizzare Website</title>
+    <title>A JoJo's Bizarre Website</title>
 
     <link rel="stylesheet" type="text/css" href="style_projet.css">
 
@@ -18,7 +18,7 @@
    
     <header id="header_home_page">
         <br><br><br><br><br><br><br><br><br>
-        <h1>A JoJo's Bizzare Website</h1>    
+        <h1>A JoJo's Bizarre Website</h1>    
         <br><br><br>
 
         <span id="span_header_1">
@@ -42,14 +42,13 @@
         </h2>
 
         <span id="span_intro">
-            Bonjour et bienvenue dans le site bizzare de Jojo. Dans cette introduction, je vais vous parler de moi et du site. <br>
+            Bonjour et bienvenue dans le site bizarre de Jojo. Dans cette introduction, je vais vous parler de moi et du site. <br>
             Pour commencer, je m'appelle Alessio Martino, je suis apprenti informaticien à l'ETML et dans le cadre de nos cours nous devons créer un site web sur un sujet qui nous passionne. <br>
-            Étant donné que je suis un fan d'anime et surtout de l'anime <em>Jojo's Bizzare Adventure</em>, je me suis dit que ce serait une bonne idée de faire une sorte de wiki qui regroupe de la partie 1 à 7 (il y a 9 partie mais la 9 est en cours et la 8 je ne l'ai pas encore lue). <br>
-            Dans chaque partie nous allons voir l'histoire de la partie, le protagoniste, l'antagoniste et le système de pouvoir dans la partie. <br> <br>
+            Étant donné que je suis un fan d'anime et surtout de l'anime <em>Jojo's Bizarre Adventure</em>, je me suis dit que ce serait une bonne idée de faire une sorte de wiki qui regroupe de la partie 1 à 7 (il y a 9 parties, mais la 9 est actuellement en cours de production <br> et la 8, je ne l'ai pas encore lue). <br>
+            Dans chaque partie, nous allons voir l'histoire de la partie, le protagoniste, l'antagoniste. <br> <br>
             Je vais rapidement vous parler de l'histoire : <br>
-            On suit une famille, les Joestars, sur plusieur generations qui débute a la fin du XIXe siècle qui doivent lutter contre les antagonistes de chaque parties. Chaque personne de la lignée des Joestars a une marque en forme d'étoile sur l'épaule gauche. <br>
-            La famille des Joestars a une "Malédiction" qui est la confrontation inévitable avec DIO et ses alliés (nous veront qui est DIO plus en détail dans la partie 1). <br>
-            Ce qui est bien avec ce manga/anime c'est qu'a chaque partie il y a un protagoniste différent.
+            On suit une famille, les Joestars, sur plusieurs générations qui débute à la fin du XIXe siècle qui doivent lutter contre les antagonistes de chaque parties. Chaque personne de la lignée des Joestars a une marque en forme d'étoile sur l'épaule gauche. <br>
+            Ce qui est bien avec ce manga/anime, c'est qu'à chaque partie, il y a un protagoniste différent.
             <br><br><br><br><br><br>
         </span>
     </article>
