--- a/Code/Part6.html
+++ b/Code/Part6.html
@@ -29,7 +29,25 @@
         </span>
     </nav>
 
+    <h1 id="texte_part">Partie 6 - Stone Ocean</h1>
 
+    <div id="img_part">
+        <img id="img_aspect" src="https://wallpapercave.com/wp/wp10232016.jpg" alt="">
+    </div>
+
+
+
+
+    <footer>
+        <span id="footer_button_part2-6">
+            <a href="Part5.html">< Partie 5 </a>
+        </span>
+
+        <span id="footer_button_part2-6">
+            <a href="Part7.html">Partie 7 ></a>
+        </span>
+
+    </footer>
 
     
 
