--- a/Code/Index.html
+++ b/Code/Index.html
@@ -9,12 +9,14 @@
     <link rel="stylesheet" type="text/css" href="style_projet.css">
 
     <meta charset="utf-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     
     <meta name="author" content="Alessio Martino">
 
 </head>
 
-<body>
+<body id="body_index">
    
     <header id="header_home_page">
         <br><br><br><br><br><br><br><br><br>
