--- a/Code/Part3.html
+++ b/Code/Part3.html
@@ -5,6 +5,13 @@
 
     <link rel="stylesheet" href="style_projet.css">
 
+    <style>
+        p, h2{
+            color: white;
+        }
+    </style>
+
+
 
 </head>
 
@@ -31,11 +38,111 @@
 
     <h1 id="texte_part">Partie 3 - Stardust Crusaders</h1>
 
-    <div id="img_part">
+    <div id="img_part_cover">
         <img id="img_aspect" src="https://wallpapers.com/images/hd/stardust-crusaders-1920-x-1080-wallpaper-6v630vfytcoxdn8s.jpg" alt="">
     </div>
 
+    <h2>
+        Explication de la partie
+    </h2>
 
+    <p>
+        Dans cette partie, on suit Jotaro Kujo, petit fils de Joseph Joestar. <br>
+        Tout commence car la mère de Jotaro, Holy Kujo, d'un coup, tombe malade. On apprend par la suite qu'elle est comme ca a cause de son Stand (Le Stand est un pouvoir qui représente la manifestation de son âme). <br>
+        Par la même occasion, Jotaro obtient assi un Stand et on apprend que tout ca c'es ta cause de Dio, car il fusionner avec le corps de Jonathan. <br>
+        Donc Jotaro doit se rendre en Egypte pour aller tuer Dio. Ils ont donc 50 jours (delai avant que Holy meurt) pour aller vaincre Dio et ses sbires.
+        <br>A partir de cette partie, le système de pouvoir principal est le Stand et plus le Hamon et dans cette partie chaque nom de Stand (car oui ils ont un nom) est une referance a une carte du tarot ou a un dieu Egyptien.
+        Pour Jotaro la referance est l'étoile et son stand s'appelle Star Platinium.
+    </p>
+
+
+    <h2>
+        Protagoniste - Jotaro Kujo
+   </h2>
+
+   <p>
+    Comme dit précédemment, Jotaro est le petil-fils de Joseph Joestar et le fils de Holy Kujo. Comme Stand, il a Star Platinium qui a la faculté d'arrêter le temps pendant une durée limitée (7 seconde a la fin de la partie). <br>
+    Etant donné que Holy est la fille de Joseph, ce dernier ansi que son ami, Mohammed Avdol, vont accompagner Jotaro dans son trajet. 
+   </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://i.pinimg.com/1200x/e2/15/9e/e2159e6c4b44eb7f2e8f002ac2d61769.jpg" alt="">
+    </div>
+
+    <h2>
+        Antagonsite - Dio Brando
+    </h2>
+
+    <p>
+        Dio fait son grand retour dans la partie 3 après avoir survécu dans le bateau en feu. Il a reussi a survivre en fusionnant avec le corp de Jonathan et en se cachant dans  un cerceuil présnet sur le bateau. <br>
+        Dio obtient le Stand The Wrold, qui est une référence a la carte de monde du tarot qui a la faculté d'arreter le temps. Le temps que Dio s'habitue a son nouveau coprs, il envoie ses sbires, qui ont chaqun un Stand, aller combatre Jotaro. <br>
+        Une fois arrivé en Egypte, Jotaro va chercher Dio pour le tuer et s'est aussi pendant le combat qu'il se rend compte qu'il peut arreter le temps (car au début il ne le savait pas).
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://upload.wikimedia.org/wikipedia/en/d/d2/Dio_Brando.jpg" alt="">
+    </div>
+
+    <h2>
+        Les JoBros - Kakyoin, Polnareff, Avdol, Iggy, Joseph
+    </h2>   
+
+    <p>
+        On va commencer par Kakyoin. Son Stand s'appelle Hierophant Green, référance a la certe du Hierophant du tarot, ses capacités sont : l'Emerald Splash (tir d'émeraudes), la possession d'ennemis, le camouflage et la création de barrières tentaculaires. <br>
+        Kakyoin devient un des Jobros de Jotaro après l'avoir combattu car de base Kakyoin etait un des sbires manipulé par Dio et Jotaro a reussi a l'enelvé de son emprise et il a voulu accompagner Jotaro pour aller battre Dio. Il meurt malheureusement en se faisant transperser le ventre par Dio. <br>
+        Cependant c'est lui qui comprend le pouvoir de Dio
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://preview.redd.it/jwes4tmyyvv31.png?auto=webp&s=f560fe04272090eacbfc3a5552779b55290a4af6" alt="">
+        <img id="img_aspect" src="https://i.pinimg.com/736x/c7/0e/38/c70e381fd346923130ddde6c719ae5d5.jpg" alt="">
+        <img id="img_aspect" src="https://media.tenor.com/Z5NT161IaIAAAAAM/lerolero.gif" alt="">
+    </div>
+
+
+    <p>
+        Ensuite vient Polnareff, il est d'origine francaise et a la Stand Silver Chariot, référance a la carte du Chariot du tarot. <br>
+        Les capacité de sont stand sont : vitesse fulgurante, capable de créer des images rémanentes, et il peut retirer son armure pour augmenter encore sa vitesse, ou projeter son épée comme un projectile. <br>
+        Polnareff aide Jotaro dans sont periple principalement pour venger l'assassinat de sa sœur, manipulé initialement par DIO
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://static.jojowiki.com/images/thumb/e/e3/latest/20220310014248/Polnareff_ASB_R.png/400px-Polnareff_ASB_R.png" alt="">
+        <img id="img_aspect" src="https://i.redd.it/polnareffs-pose-from-jojo-bizarre-adventure-stardust-v0-13x00vi3wdpe1.jpg?width=617&format=pjpg&auto=webp&s=336b487f27affc4e9b28ba121cc9ce395944c90a" alt="">
+    </div>
+
+    <p>
+        Maintenant parlons de Avdol, c'est l'ami de Joseph. Mohammed Avdol accompagne Jotaro principalement en raison de sa loyauté envers Joseph Joestar, un ami qu'il connait depuis longtemps. <br> 
+        En tant qu'Égyptien et utilisateur expérimenté de Stand, il guide le groupe pour localiser et vaincre DIO afin de sauver la mère de Jotaro. <br>
+        Son Stand s'appelle Magician's Red, il fait référance a la carte du magicien du tarot. Le stand possède une maîtrise totale de la pyrokinésie (génération et manipulation de flammes) à moyenne portée. Il peut créer des flammes intenses, les contrôler avec précision, et possède des techniques signature comme le Crossfire Hurricane (projections d'ankhs de feu) et le Red Bind (cordes de feu pour ligoter). <br>
+        Malheureusement Avdol perd la vie en voulant proteger Polnareff. 
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://static.jojowiki.com/images/thumb/f/fd/latest/20220310013919/Avdol_ASB_R.png/400px-Avdol_ASB_R.png" alt="">
+    </div>
+
+    <p>
+        Ensuite vient Iggy, c'est un chien manieur de Stand, il accompagne Jotaro et son groupe dans principalement parce qu'il a été recruté par la Fondation Speedwagon pour renforcer l'équipe face aux ennemis de DIO. 
+        Il magnie le Stand The Fool, qui fait référence a la carte Fool du tarot. <br>
+        Son Stand manipule le sable pour créer des ailes, des clones ou des défenses, offrant une polyvalence défensive et offensive redoutable. <br>
+        Iggy meurt aussi en protègeant Polnareff
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://i.redd.it/stand-off-who-would-win-this-fight-v0-6j6ijd8r4spd1.jpg?width=560&format=pjpg&auto=webp&s=cb3f9c3946a0675dd239a2ca29db3b5c5e045bd6" alt="">
+        <img id="img_aspect" src="https://static.jojowiki.com/images/thumb/5/5d/latest/20191015220125/Iggy%27s_death.png/400px-Iggy%27s_death.png" alt="">
+    </div>
+
+    <p>
+        Pour finir parlons de Joseph Joestar, il accompagne Jotaro car Holy est sa fille et il veut la sauver. C'est le même que dan sla partie 2 mais en plus vieux. Il magnie le Stand Hermit Purple, qui fait référance a la catre Hermit du tarot. <br>
+        Son Stand permet d'obtenir des informations via des photographies ou vidéos psychiques en détruisant des appareils (caméra, téléviseur). Il excelle aussi dans la manipulation physique (grappin) et la conduction de l'Onde (Hamon). 
+    </p>
+
+    <div id="img_part">
+        <img id="img_aspect" src="https://images.shoutwiki.com/jojoss/e/ea/Unit_Joseph_Joestar_%28Anime_Ver.%29_%28R%29.png" alt="">
+    </div>
+    <br>
 
 
     <footer>
