--- a/Code/part2.html
+++ b/Code/part2.html
@@ -4,7 +4,7 @@
 <head>
 
     <link rel="stylesheet" href="style_projet.css">
-
+    <link rel="icon" type="image/png" href="https://static.jojowiki.com/images/thumb/3/33/latest/20221003055733/RedStoneAja.png/800px-RedStoneAja.png">
 
 </head>
 
@@ -31,7 +31,7 @@
 
     <h1 id="texte_part"> Partie 2 - Battle Tendency</h1>
 
-    <div id="img_part">
+    <div id="img_part_cover">
         <img id="img_aspect" src="https://wallpapercave.com/wp/wp7348531.jpg" alt="">
     </div>
 
@@ -80,7 +80,7 @@
     </p>
 
 
-    <div id="texte_part">
+    <div id="img_part">
         <img id="img_aspect" src="https://images.castingcall.club/role_images/esidisi-78747.png" alt="">
     </div>
 
