fin sequance du 6.02

--- a/Code/Part3.html
+++ b/Code/Part3.html
@@ -5,13 +5,7 @@
 
     <link rel="stylesheet" href="style_projet.css">
 
-    <style>
-        p, h2{
-            color: white;
-        }
-    </style>
-
-
+    
 
 </head>
 
@@ -66,7 +60,8 @@
    </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://i.pinimg.com/1200x/e2/15/9e/e2159e6c4b44eb7f2e8f002ac2d61769.jpg" alt="">
+        <img id="img_aspect" src="https://vignette3.wikia.nocookie.net/characterprofile/images/c/cb/Jotaro_2014_blue_by_superhedgehogtx-d6r7xvh.png/revision/latest?cb=20160104212032" alt="">
+        <img id="img_aspect" src="https://i.namu.wiki/i/0kggSR3vldNGwx71zBWkQnuiSNn_kdI0HsvAEZA4T5HsNHRC6PJT49aZYQF_hUXs-KJ-PQIm3xKFEX4sUWUGUA.webp" alt="">
     </div>
 
     <h2>
@@ -76,7 +71,7 @@
     <p>
         Dio fait son grand retour dans la partie 3 après avoir survécu dans le bateau en feu. Il a reussi a survivre en fusionnant avec le corp de Jonathan et en se cachant dans  un cerceuil présnet sur le bateau. <br>
         Dio obtient le Stand The Wrold, qui est une référence a la carte de monde du tarot qui a la faculté d'arreter le temps. Le temps que Dio s'habitue a son nouveau coprs, il envoie ses sbires, qui ont chaqun un Stand, aller combatre Jotaro. <br>
-        Une fois arrivé en Egypte, Jotaro va chercher Dio pour le tuer et s'est aussi pendant le combat qu'il se rend compte qu'il peut arreter le temps (car au début il ne le savait pas).
+        Une fois arrivé en Egypte, Jotaro va chercher Dio pour le tuer et s'est aussi pendant le combat qu'il se rend compte qu'il peut arreter le temps comme le stand de Dio (car au début il ne le savait pas).
     </p>
 
     <div id="img_part">
