--- a/Code/histoire.html
+++ b/Code/histoire.html
@@ -30,7 +30,7 @@
     <Article id="part_histoire">
         <span >
             <a href="Part1.html">
-            <img id="part1_histoire" src="https://preview.redd.it/3gn78g57dlq51.jpg?width=1080&crop=smart&auto=webp&s=fc5be073d9bfb7be9370a3d507e10fc7240c1799" alt="1ere partie"></a>
+            <img id="part1_histoire" src="phantom-blood-logo.png" alt="1ere partie"></a>
         </span>
 
         <span>
@@ -40,7 +40,7 @@
 
         <span>
             <a href="Part3.html">
-            <img id="part3_histoire" src="https://preview.redd.it/rrovw6vi4lp51.png?auto=webp&s=629d9e1b05754d8f93f8a6a362cce20634fbd02d" alt="3e partie"></a>
+            <img id="part3_histoire" src="stardust-crusaders-logo.png" alt="3e partie"></a>
         </span>
 
         <span>
