--- a/Code/Part1.html
+++ b/Code/Part1.html
@@ -5,6 +5,9 @@
 
     <link rel="stylesheet" href="style_projet.css">
 
+    <title>Phantom Blood</title>
+
+    <link rel="icon" href="https://static.jojowiki.com/images/thumb/7/7c/latest/20200418040855/StoneMaskAnime.png/400px-StoneMaskAnime.png">
 
 </head>
 
@@ -141,7 +144,7 @@
 
     <footer>
 
-        <span id="footer_button_part1">
+        <span id="footer_1_button">
          <a href="Part2.html">Partie 2 ></a>
         </span>
 
