--- a/Code/Part3.html
+++ b/Code/Part3.html
@@ -5,6 +5,9 @@
 
     <link rel="stylesheet" href="style_projet.css">
 
+    <title>Stardust Crusaders</title>
+
+    <link rel="icon" href="images/part-3-favicon.png">
     
 
 </head>
@@ -141,11 +144,11 @@
 
 
     <footer>
-    <span id="footer_button_part2-6">
+    <span id="footer_button_part2-7">
         <a href="Part2.html">< Partie 2 </a>
     </span>
 
-    <span id="footer_button_part2-6">
+    <span id="footer_button_part2-7">
         <a href="Part4.html">Partie 4 ></a>
     </span>
 
