--- a/Code/Part7.html
+++ b/Code/Part7.html
@@ -39,8 +39,12 @@
 
     <footer>
 
-        <span id="footer_button_part2-6">
+        <span id="footer_button_part2-7">
             <a href="Part6.html">< Partie 6</a>
+        </span>
+
+        <span id="footer_button_part2-7">
+            <a href="arbre-genealogique.html">Arbre Généalogique des Joestars ></a>
         </span>
 
     </footer>
