--- a/Code/histoire.html
+++ b/Code/histoire.html
@@ -30,7 +30,7 @@
     <Article id="part_histoire">
         <span >
             <a href="Part1.html">
-            <img id="part1_histoire" src="phantom-blood-logo.png" alt="1ere partie"></a>
+            <img id="part1_histoire" src="images/phantom-blood-logo.png" alt="1ere partie"></a>
         </span>
 
         <span>
@@ -40,7 +40,7 @@
 
         <span>
             <a href="Part3.html">
-            <img id="part3_histoire" src="stardust-crusaders-logo.png" alt="3e partie"></a>
+            <img id="part3_histoire" src="images/stardust-crusaders-logo.png" alt="3e partie"></a>
         </span>
 
         <span>
@@ -61,6 +61,12 @@
         <span>
             <a href="Part7.html">
             <img id="part7_histoire" src="https://i.redd.it/kx4ttqnnb4951.png" alt="7e partie"></a>
+        </span>
+
+        <span>
+            <a href="arbre-genealogique.html">
+                arbre
+            </a>
         </span>
     </Article>
 
